# product-card-bot

./: .env_example  README.md  TASK.md  app.py  app_config.py  pyproject.toml
admins/filters/: is_admin.py
admins/handlers/: __init__.py  admin_menu.py  moderation.py  moderation_navigation.py  statistics.py
admins/keyboards/: admin_keyboards.py  edit_field_keyboards.py  moderation_keyboards.py
admins/states/: moderation.py
core/: constants.py
core/database/: db_helper.py
core/handlers/: start.py
core/keyboards/: start_keyboard.py
core/mixin/: int_id_pk.py
core/models/: __init__.py  base.py
core/utils/: case_converter.py  formater.py  paginator.py  status.py
data/: bot.db
products/handlers/: __init__.py  add_product.py  product_edit.py  product_navigation.py  view_products.py
products/keyboards/: empty_products_keyboards.py  product_keyboards.py
products/models/: __init__.py  product.py
products/queries/: product.py
products/states/: add_product.py  edit_product.py  view_products.py
